# openclaw_veterinario

./: LICENSE  README.md  conftest.py  openclaw-setup.html  pyproject.toml  run.py
src/yumi/: main.py
src/yumi/api/: agendamento_routes.py  clinica_func_routes.py  clinica_routes.py  integracao_routes.py  routes.py  usuario_routes.py  veterinario_routes.py
src/yumi/core/: config.py  database.py  logger.py
src/yumi/database/: init_db.py  models.sql  test_db.py  yumi.db
src/yumi/models/: __init__.py  agendamento.py  base.py  clinica.py  clinica_funcionamento.py  integracao.py  schemas.py  usuario.py  veterinario.py
src/yumi/schemas/: schemas_agendamento.py  schemas_clinica.py  schemas_clinica_func.py  schemas_integracao.py  schemas_usuario.py  schemas_veterinarios.py
src/yumi/services/: agendamento_service.py  clinica_func_service.py  clinica_service.py  integracao_service.py  usuario_service.py  veterinario_service.py
src/yumi/utils/: system_info.py  tools.py  uuid_generator.py
tests/integrations/: test_auth_routes.py  test_route_agendamento.py  test_route_clinica.py  test_route_integracao.py  test_route_veterinario.py
tests/units/: test_agendamento_service.py  test_clinica_service.py  test_schemas.py  test_tools.py  test_uuid_generator.py  test_veterinario_service.py
tests/units/test_auth/: test_auth_service.py  test_dependencies.py  test_security.py
