[project]
name = "yumi-agent"
version = "0.1.0"
description = "Agente virtual Yumi para clínica veterinária"
authors = [
    {name = "Will Lima"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
ruff = "^0.15.4"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pre-commit = "^4.5.1"

